--- a/mtams/mtams-war/web/forexView.xhtml
+++ b/mtams/mtams-war/web/forexView.xhtml
@@ -13,6 +13,7 @@
             <ui:define name="content">
                 <h:form>
                     <p:panel header="Foreign Exchange Form">  
+                        <p:button outcome="#{foreignBean.goEdit()}" id="editButton"  title="Edit Button" value="Edit" />
                         <fieldset><legend>Business Travel</legend>
                             <h:panelGrid columns="2" columnClasses="label, value" styleClass="grid">     
                                 <h:outputText value="Company name/Reg. number: "/>  
@@ -61,14 +62,18 @@
                         </fieldset>
 
                         <fieldset><legend>Breakdown of Forex required</legend>
-                            <h:panelGrid columns="2" columnClasses="label, value">  
+                            <h:panelGrid columns="3" columnClasses="label, value"> 
 
                                 <h:outputText value="Travellers cheques: "  />  
+                                    <h:outputText id="curcheq" value="#{foreignBean.viewForX.currencycheque}" /> 
                                 <h:outputText id="travelCheq" value="#{foreignBean.viewForX.travelerscheques}" /> 
 
                                 <h:outputText value="Foreign cash: "  />  
+                                    <h:outputText id="curcash" value="#{foreignBean.viewForX.currencycash}" /> 
                                 <h:outputText id="forCash" value="#{foreignBean.viewForX.cash}" /> 
-
+                            </h:panelGrid>
+                            
+                            <h:panelGrid columns="2" columnClasses="label, value">
                                 <h:outputText value="Type: (Visa, diners etc): " />  
                                 <h:outputText id="type" value="#{foreignBean.viewForX.cctype}"/>                           
 
@@ -80,8 +85,11 @@
 
                                 <h:outputText value="Expiry date: " />  
                                 <h:outputText id="Expire" value="#{foreignBean.viewForX.ccexpirydate}" />     
-
+                            </h:panelGrid>
+                            
+                            <h:panelGrid columns="3" columnClasses="label, value">
                                 <h:outputText value="Amount: " />  
+                                <h:outputText id="curcc" value="#{foreignBean.viewForX.currencycc}" /> 
                                 <h:outputText id="amount" value="#{foreignBean.viewForX.ccpaymentamount}" /> 
 
                             </h:panelGrid>  
