--- a/mtams/mtams-war/web/login.xhtml
+++ b/mtams/mtams-war/web/login.xhtml
@@ -10,6 +10,13 @@
         <ui:composition template="./template/template.xhtml">
 
             <ui:define name="content">
+                <h3>Monash Travel Application System</h3>
+                <p><h6>Welcome to Monash South Africa Travel Application System. This system is designed to be used by all Monash South 
+                        Africa staff wishing to apply for travel abroad. Several forms are required for completion before your application 
+                        can be sent for approval.<br />Please Login with your registered credentials, and begin form completion.</h6></p>
+                    
+                    <h6></h6>
+                    
                 <h:form class="form-2" id="loginForm" style="margin-top: 1%; left: 35%; top:35%; position: absolute; ">
                     <h1><span class="log-in">Log in</span></h1>
                     <p:messages id="loginMessage" showDetail="true" closable="true" autoUpdate="true" globalOnly="true"/>
