Final costing country city  currency dialogue demo.

--- a/branches/megamerge/mtams/mtams-war/web/lookuptest.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/lookuptest.xhtml
@@ -83,6 +83,11 @@ and open the template in the editor.
                 <p:dialog header="Header Text" widgetVar="dlgCountry">
 
                     <div id="DTdivtest" class="divCurrency" >
+                                                <!--
+                        **************************
+                        country
+                        **************************
+                        -->
 
                         <h:form id="DTformCountry" styleClass="test" > 
                             <p:dataTable id="CountrySel" styleClass="dlgCurrency" var="country" 
