--- a/mtams/mtams-war/web/forexEdit.xhtml
+++ b/mtams/mtams-war/web/forexEdit.xhtml
@@ -23,8 +23,20 @@
                                 <h:outputText value="#{foreignBean.travelerP.firstname}" />
                                 <h:message for=""/>
 
-                                <h:outputText value="Physical address: " />  
-                                <h:outputText value="#{foreignBean.travelerP.homeaddress}" />
+                                <h:outputText value="Home Address Line 1: " />  
+                                <h:outputText value="#{foreignBean.travelerP.homeaddress1}" />
+                                <h:message for=""/>
+                                <h:outputText value="Home Address Line 2: " />  
+                                <h:outputText value="#{foreignBean.travelerP.homeaddress2}" />
+                                <h:message for=""/>
+                                <h:outputText value="City: " />  
+                                <h:outputText value="#{foreignBean.travelerP.city}" />
+                                <h:message for=""/>
+                                <h:outputText value="Country: " />  
+                                <h:outputText value="#{foreignBean.travelerP.country}" />
+                                <h:message for=""/>
+                                <h:outputText value="Postal Code: " />  
+                                <h:outputText value="#{foreignBean.travelerP.postalcode}" />
                                 <h:message for=""/>
 
                                 <h:outputText value="Telephone number: " />  
@@ -104,15 +116,6 @@
                                 </p:inplace>
                                 <p:message for="forCash" id="fcError"/>
 
-                                <h:outputText value="Cash passport Card:(GBP, USD, AUD, EURO): "  />  
-                                <p:inplace id="cashCardIP" emptyLabel="Click to Edit">  
-                                    <p:inputText id="cashCard" value="#{foreignBean.cashPassportCard}" >
-                                        <f:validateLength minimum="1" maximum="15"/>
-                                        <p:ajax update="cpcError" event="keyup" />
-                                    </p:inputText>
-                                </p:inplace>
-                                <p:message for="cashCard" id="cpcError"/>
-
                                 <h:outputText value="Type: (Visa, diners etc): " />  
                                 <p:inplace id="typeIP" emptyLabel="Click to Edit">
                                     <p:inputText id="type" value="#{foreignBean.type}">
@@ -123,22 +126,12 @@
                                 <p:message for="type" id="TyError"/>                            
 
                                 <h:outputText value="Number: " />  
-                                <p:inplace id="numIP" emptyLabel="Click to Edit">
-                                    <p:inputText id="num" value="#{foreignBean.number}">
-                                        <f:validateLength minimum="1" maximum="30"/>
-                                        <p:ajax update="numError" event="keyup" />
-                                    </p:inputText>
-                                </p:inplace>  
-                                <p:message for="num" id="numError"/>
+                                <p:outputLabel value="Details to be filled in on printed document."/>  
+                                <p:message/>
 
                                 <h:outputText value="Last 3 digits on reverse of card : " /> 
-                                <p:inplace id="digitIP" emptyLabel="Click to Edit">
-                                    <p:inputText id="digit" value="#{foreignBean.last3}" >
-                                        <f:validateLength minimum="3" maximum="3"/>
-                                        <p:ajax update="last3Error" event="keyup" />
-                                    </p:inputText>
-                                </p:inplace>
-                                <p:message for="digit" id="last3Error"/>
+                                <p:outputLabel value="Details to be filled in on printed document."/>  
+                                <p:message/>
 
                                 <h:outputText value="Expiry date: " />  
                                 <p:inplace id="ExpireIP" emptyLabel="Click to Edit">
