finished the messages admin the success message now show up.

--- a/branches/megamerge/mtams/mtams-war/web/messageAdmin.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/messageAdmin.xhtml
@@ -16,7 +16,7 @@ and open the template in the editor.
             <ui:define name="content">
 
                 <h:form>       
-
+                    <p:messages id="createMessages" closable="true" showDetail="true" autoUpdate="true" /> 
 
                     <p:panel header="Messages for notifaction emails">
                         <p:accordionPanel id="MeditP" 
