changes made to motivbean and ForeignBean to store in database when form has been completed. also fix to piets problem with create forex not going to application home.

--- a/branches/megamerge/mtams/mtams-war/web/applicationApproval.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/applicationApproval.xhtml
@@ -217,8 +217,8 @@
 
                             </h:panelGrid>
 
-                            <p:button value="Cancel" outcome="#{approvalBean.goHome()}" />
-                            <p:commandButton  value="Submit" action="#{approvalBean.approve()}" update="viewApplicationPanel" ajax="false" />
+                            <p:button value="Cancel" outcome="#{approvalBean.goHome()}" styleClass="button-right" />
+                            <p:commandButton  value="Submit" action="#{approvalBean.approve()}" update="viewApplicationPanel" ajax="false" styleClass="button-right"/>
                         </fieldset>
                     </p:panel>
                 </h:form>
