--- a/mtams/mtams-war/web/applicationApproval.xhtml
+++ b/mtams/mtams-war/web/applicationApproval.xhtml
@@ -217,8 +217,8 @@
 
                             </h:panelGrid>
 
-                            <p:button value="Cancel" outcome="#{approvalBean.goHome()}" />
-                            <p:commandButton  value="Submit" action="#{approvalBean.approve()}" update="viewApplicationPanel" ajax="false" />
+                            <p:button value="Cancel" outcome="#{approvalBean.goHome()}" styleClass="button-right" />
+                            <p:commandButton  value="Submit" action="#{approvalBean.approve()}" update="viewApplicationPanel" ajax="false" styleClass="button-right"/>
                         </fieldset>
                     </p:panel>
                 </h:form>
