--- a/mtams/mtams-war/web/forexCreate.xhtml
+++ b/mtams/mtams-war/web/forexCreate.xhtml
@@ -435,8 +435,8 @@
 
 
                                 </h:panelGrid>                         
-                                <p:commandButton value="Cancel" ajax="false" actionListener="#{foreignBean.toAppHome()}" />
-                                <p:commandButton value="Submit" ajax="false" actionListener="#{foreignBean.createForm()}" />
+                                <p:commandButton value="Cancel" ajax="false" action="#{foreignBean.toAppHome()}" />
+                                <p:commandButton value="Submit" ajax="false" action="#{foreignBean.createForm()}" />
 
                             </p:panel>  
                         </p:tab>  
